feat: Initialize Fine Tracing project with core functionality
- Added pyproject.toml for package management and dependencies.
- Created pytest.ini for testing configuration.
- Implemented Minimum Spanning Tree (MST) algorithm in MST.py.
- Developed command line interface (CLI) in cli.py for user interaction.
- Established runtime configuration in config.py with environment variable support.
- Introduced edge detection methods in edge.py.
- Implemented greedy nearest-neighbor ordering in greedy.py.
- Developed main processing pipeline in main.py.
- Created metrics computation module in metrics.py for performance evaluation.
- Added preprocessing functionality in preprocessing.py.
- Implemented corner processing and tracing logic in process_corners.py.
- Developed utility functions in utils.py for various operations.
- Added initial test cases for configuration and utility functions.
- Included a sample test image for testing purposes.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,19 @@
 /papers
 /.vscode
 /test
+
+# Added standard Python ignores
+__pycache__/
+*.py[cod]
+*$py.class
+build/
+dist/
+*.egg-info/
+.eggs/
+.venv/
+venv/
+logging.log
+*.csv
+*.json
+.idea/
+.DS_Store
